--- a/app/views/web/ost/events_news/_events.erb
+++ b/app/views/web/ost/events_news/_events.erb
@@ -1,4 +1,4 @@
-<div class="events-container">
+<div class="events-container" id="events">
   <div class="row my-5">
     <div class="container ">
 
@@ -65,9 +65,10 @@
           </div>
           <div class="row dynamic-events-section"></div>
         </div>
-        <div class="col-md-5 pb-5 pl-md-5">
-          <div class="row events-date-section">
-            <div class="col-12 h-100 py-5 px-md-5">
+        <div class="col-md-5 pb-5 pl-md-5 events-date-section">
+          <div class="row events-date-section-content">
+            <div class="col-12 h-100 p-3">
+              <div class="clear-selection text-right p-2">Clear Selection</div>
               <div>
                 <div class="events-date-picker"/>
               </div>
