--- a/app/views/web/ost/events_news/_jumbotron.erb
+++ b/app/views/web/ost/events_news/_jumbotron.erb
@@ -11,7 +11,7 @@
           existence in this spot, which was created for the.
         </p>
         <a href="#events" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See Events">See Events</a>
-        <a href="#news" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Read News</a>
+        <a href="#news" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Read News">Read News</a>
       </div>
 
       <div class="col-md-6 col-lg-6 text-center my-auto">
