--- a/app/views/web/ost/events_news/_news.erb
+++ b/app/views/web/ost/events_news/_news.erb
@@ -1,6 +1,6 @@
 <div class="row my-5" id="news">
   <div class="container">
-    <h3 class="pl-4 pl-md-2">
+    <h3 class="pl-4 pl-md-2 text-center">
       <svg class="ost-news-logo">
         <switch>
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-news-logo"></use>
