homepage minor changes

--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -8,7 +8,7 @@
             The OpenST Infrastructure enables scalable token economies. OST leads development on the OpenSt Protocol, a framework for building highly scalable blockchain toekn econimies and also OpenST Mosaic, a layer-2 scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at signifiacntly lower gas prices. All OpenST releases are provided via open source license for anyone to use and to build and improve on.
           </p>
           <div class="my-4">
-            <a href="" class="btn btn-primary my-2 my-md-3" title="GITHUB FOUNDATION">GITHUB FOUNDATION</a>
+            <a href="https://github.com/OpenSTFoundation" class="btn btn-primary my-2 my-md-3" title="GITHUB FOUNDATION">GITHUB FOUNDATION</a>
             <a href="" class="btn btn-secondary openst-forum my-2 my-md-3 ml-3 " title="OPEN ST FORUM">OPEN ST FORUM</a>
           </div>
         </div>
@@ -36,8 +36,8 @@
               <p>The OpenST protocol enables the creation of utility tokens on a utility blockchain while the value of those tokens is backed by staked crypto-assets on a value blockchain The OpenST Protocol establishes a bridge between the Ethereum value blockchain and a number of utility blockchains. </p>
             </div>
             <div>
-              <a href="" class="white-paper-link">WHITE PAPER</a>
-              <a href="" class="github-link ml-3">
+              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link">WHITE PAPER</a>
+              <a href="https://github.com/OpenSTFoundation" class="github-link ml-3">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
@@ -62,7 +62,7 @@
               <p style="flex: 1 1 auto;">OpenST Mosaic is an overlay-consensus engine that adds transaction throughput capacity to Ethereum by leveraging Proof-of-Work to secure a large number of utility blockchains. OpenST Mosaic introduces 2nd-layer consensus rules for open validators that provide economic finality for the transactions executed on OpenST utility chains. </p>
             </div>
             <div>
-              <a href="" class="white-paper-link">WHITE PAPER</a>
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link">WHITE PAPER</a>
               <a href="" class="github-link ml-3">
                 <svg width="15" height="15">
                   <switch>
