--- a/app/assets/stylesheets/web/ost/events-news/Events.scss
+++ b/app/assets/stylesheets/web/ost/events-news/Events.scss
@@ -70,7 +70,6 @@
     }
   }
   .events-date-section-content {
-    background-color: $gray-100;
     position: sticky;
     position: -webkit-sticky;
     top: 20px;
@@ -122,6 +121,9 @@
       content: 'X';
       padding: $mark-padding;
     }
+    .date-section-background{
+      background-color: $gray-100;
+    }
   }
 }
 
@@ -141,7 +143,7 @@
     .events-date-picker {
       .datepicker.datepicker-inline {
         .datepicker-days td, .datepicker-days th{
-          padding:$table-cell-padding;
+          padding: 0.5rem;
         }
       }
     }
