--- a/app/views/web/ost/events_news/_events.erb
+++ b/app/views/web/ost/events_news/_events.erb
@@ -66,15 +66,15 @@
           <div class="row dynamic-events-section"></div>
         </div>
         <div class="col-md-5 pb-5 pl-md-5 events-date-section">
-          <div class="row events-date-section-content">
-            <div class="col-12 h-100 p-3">
+          <div class="row events-date-section-content pl-lg-5">
+            <div class="col-12 h-100 p-3 date-section-background">
               <div class="clear-selection text-right p-2">Clear Selection</div>
               <div>
                 <div class="events-date-picker"/>
               </div>
             </div>
             <div class="col-12 my-3 text-center">
-              <button class="btn btn-secondary">SHOW ARCHIVED EVENTS</button>
+              <button class="btn btn-secondary px-2 px-lg-3">SHOW ARCHIVED EVENTS</button>
             </div>
           </div>
         </div>
