--- a/app/views/web/ost/events_news/_events.erb
+++ b/app/views/web/ost/events_news/_events.erb
@@ -13,6 +13,9 @@
   </div>
 
     <div class="container">
+      <div class="d-block d-md-none">
+
+      </div>
       <div class="row">
       <%
         # events = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_events]['api_response'] || []) rescue []
@@ -65,7 +68,7 @@
           </div>
           <div class="row dynamic-events-section"></div>
         </div>
-        <div class="col-md-5 pb-5 pl-md-5 events-date-section">
+        <div class="col-md-5 pb-5 pl-md-5 d-none d-md-block events-date-section">
           <div class="row events-date-section-content pl-lg-5">
             <div class="col-12 h-100 p-3 date-section-background">
               <div class="clear-selection text-right p-2">Clear Selection</div>
