--- a/app/views/web/ost/index/_jumbotron.erb
+++ b/app/views/web/ost/index/_jumbotron.erb
@@ -1,19 +1,28 @@
+<%
+  ost_home_page_jumbotron = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_home_page_jumbotron]['api_response'] || []) rescue []
+  if ost_home_page_jumbotron.present?
+%>
+
 <section class="container-jumbotron py-5 d-none d-md-block">
   <div class="container">
     <div class="row align-items-center">
 
       <div class="col-md-12 col-lg-6">
-        <h2 class="header-blue-900">Empowering Decentralized Economies</h2>
+        <h2 class="header-blue-900"><%= ost_home_page_jumbotron[0]['jumbotron_title']%></h2>
         <p class="mt-3">
-          OST is a public blockchain platform for businesses with millions of users. Launch your own Branded Tokens and turn your business into a dynamic ecosystem.
+          <%= ost_home_page_jumbotron[0]['jumbotron_description']%>
         </p>
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Discover OST KIT⍺">How it works</a>
-        <a href="/partners" class="btn btn-secondary my-2 ml-3 smooth-scroll" title="Meet Our Partners">Develop with us</a>
+        <% if ost_home_page_jumbotron[0]['primary_btn_enabled_flag'] == 'on' %>
+          <a href="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></a>
+        <% end %>
+        <% if ost_home_page_jumbotron[0]['sec_btn_enabled_flag'] == 'on' %>
+          <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-secondary my-2 ml-3 smooth-scroll" title="<%=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title']%></a>
+        <%end%>
       </div>
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
         <div class="illustration w-100">
-          <div class="btn-secondary btn btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="https://www.youtube.com/embed/yJswJcnLYpU">
+          <div class="btn-secondary btn btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="<%= ost_home_page_jumbotron[0]['jumbotron_video_link'] %>">
             <div class="play align-middle">
               <svg class="svg">
                 <switch>
@@ -25,7 +34,7 @@
           </div>
           <img
             class="img-fluid position-relative" alt="OST Jumbotron"
-            src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-jumbotron-illustration@2x.png" />
+            src="<%= ost_home_page_jumbotron[0]['jumbotron_image'] %>"/>
           <p class="mt-2">Introducing of OpenST Mosaic Protocol</p>
         </div>
       </div>
@@ -33,5 +42,7 @@
     </div>
   </div>
 </section>
+
+<%end%>
 
 <%= render :partial => "shared/web/modals/help_video" %>
