Code Review changes

--- a/app/views/web/ost/index/_jumbotron.erb
+++ b/app/views/web/ost/index/_jumbotron.erb
@@ -33,7 +33,7 @@
             <span class="align-middle"></span>
           </div>
           <img
-            class="img-fluid position-relative" alt="OST Jumbotron"
+            class="img-fluid position-relative" alt="Simple Token Play Video"
             src="<%= ost_home_page_jumbotron[0]['jumbotron_image'] %>"/>
           <p class="mt-2">Introducing of OpenST Mosaic Protocol</p>
         </div>
@@ -44,5 +44,3 @@
 </section>
 
 <%end%>
-
-<%= render :partial => "shared/web/modals/help_video" %>
