--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -1,29 +1,19 @@
 <%= render :partial => "/web/ost/index/uber_banner" %>
-<%#= render :partial => "/shared/web/common/navbar" %>
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/index/jumbotron" %>
 <%= render :partial => "/web/ost/index/jumbotron_mobile" %>
 <%= render :partial => "/web/ost/index/events_carousel" %>
 <%= render :partial => "/web/ost/index/news_carousel" %>
 <%= render :partial => "/web/ost/index/blockchain_infra" %>
-<section style="height: 50px">
-  <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 50px;width: 100%;">
-    <polygon points="0,0 100,0 100,100"/>
-  </svg>
-</section>
 <%= render :partial => "/web/ost/index/ost_kit" %>
 <%= render :partial => "/web/ost/index/partners" %>
-<section style="height: 50px;background-color: #FFFFFF">
-  <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 50px;width: 100%;">
-    <polygon points="0,0 100,100 0,100"/>
-  </svg>
-</section>
 <%= render :partial => "/web/ost/index/liquidity_token_exchange"%>
 <%= render :partial => "/web/ost/index/liquidity_token_exchange_mobile"%>
 <%= render :partial => "/web/ost/index/roadmap" %>
-<%= render :partial => "/web/ost/index/mission" %>
 <%= render :partial => "/web/ost/index/subscribe" %>
 <%= render :partial => "/web/ost/index/ost_team" %>
 <%= render :partial => "/web/ost/index/buy_ost" %>
+
+<!-- # Shared  / referenced assets / HTML elements / Modals etc. -->
 <%= render :partial => "/shared/web/modals/help_video" %>
 <%= render :partial => "/web/ost/roadmap/roadmap_svg_sprite" %>
