--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -78,3 +78,9 @@
     </div>
   </div>
 </section>
+
+<div style="height: 50px">
+  <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 50px;width: 100%;">
+    <polygon points="0,0 100,0 100,100"/>
+  </svg>
+</div>
