--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -47,3 +47,9 @@
     </div>
   </div>
 </section>
+
+<div style="height: 50px;background-color: #FFFFFF">
+  <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 50px;width: 100%;">
+    <polygon points="0,0 100,100 0,100"/>
+  </svg>
+</div>
