--- a/app/views/web/ost/events_news/_events_content.erb
+++ b/app/views/web/ost/events_news/_events_content.erb
@@ -1,11 +1,13 @@
 
 <div class="col-12">
   <div class="outer-wrapper">
-      <svg width="24" height="45" class="bookmark-icon">
+    <a  data-toggle="popover" data-container="body"  class="bookmark-wrapper" data-html="true" data-placement="bottom">
+    <svg width="24" height="35" class="bookmark-icon">
         <switch>
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bookmark"></use>
         </switch>
       </svg>
+    </a>
       <div class="event-content-wrapper mb-5">
         <a href="{{event_link}}" target="_blank" class="d-block" title="{{event_name}}">
           <div class="media content-wrapper align-items-center">
@@ -23,6 +25,24 @@
             </div>
           </div>
         </a>
+        <div id = "calendar-list" class="d-none" >
+          <div class="calendar-buttons  row ">
+            <a  class="apple-btn btn btn-light text-left col-12"
+                href=""
+                target="_blank">
+              <small > add to </small><br>Apple Calendar</a>
+            <a class="btn btn-light mt-2 text-left col-12 google-btn"
+              href="https://calendar.google.com/calendar/r/eventedit?
+text={{event_name}}&
+dates={{ymdDate event_date}}&
+details={{event_desc}}&
+location={{event_desc}}
+"
+               target="_blank">
+              <small > add to </small><br>Google Calendar</a>
+
+          </div>
+        </div>
       </div>
   </div>
 </div>
