--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -62,7 +62,8 @@ h1, h2, h3, h4, h5, h6{
           width:100%;
           height:100%;
           fill: #34445b;
-          margin-left: -8px;
+          margin-left:-6px;
+          margin-top: 2px;
         }
       }
 
