events carousal changes

--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -36,7 +36,14 @@
               <p>The OpenST protocol enables the creation of utility tokens on a utility blockchain while the value of those tokens is backed by staked crypto-assets on a value blockchain The OpenST Protocol establishes a bridge between the Ethereum value blockchain and a number of utility blockchains. </p>
             </div>
             <div>
-              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link">WHITE PAPER</a>
+              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link">
+                <svg width="15" height="15">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#white-paper-blockchain-infrastructure"></use>
+                  </switch>
+                </svg>
+                <span>WHITE PAPER</span>
+              </a>
               <a href="https://github.com/OpenSTFoundation" class="github-link ml-3">
                 <svg width="15" height="15">
                   <switch>
@@ -62,7 +69,14 @@
               <p style="flex: 1 1 auto;">OpenST Mosaic is an overlay-consensus engine that adds transaction throughput capacity to Ethereum by leveraging Proof-of-Work to secure a large number of utility blockchains. OpenST Mosaic introduces 2nd-layer consensus rules for open validators that provide economic finality for the transactions executed on OpenST utility chains. </p>
             </div>
             <div>
-              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link">WHITE PAPER</a>
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link">
+                <svg width="15" height="15">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#white-paper-blockchain-infrastructure"></use>
+                  </switch>
+                </svg>
+                <span>WHITE PAPER</span>
+              </a>
               <a href="" class="github-link ml-3">
                 <svg width="15" height="15">
                   <switch>
