--- a/app/assets/stylesheets/web/ost/index/EventsCarousel.scss
+++ b/app/assets/stylesheets/web/ost/index/EventsCarousel.scss
@@ -18,10 +18,9 @@ $background-color : #f2f8f8 ;
   .dateEl{
     display: inline-block;
     text-align: center;
-    background: #27b8d2;
-    padding: 15px 0;
+    padding: 15px 15px;
     color: #FFFFFF;
-    width: 20%;
+    width: 25%;
     text-transform: uppercase;
     em{
       display: block;
@@ -38,13 +37,29 @@ $background-color : #f2f8f8 ;
       font-weight: 500;
       font-size: 0.875rem;
     }
-    p{
+    .event-desc{
       color: #597a84;
-      font-weight: 300;
+      font-weight: 500;
       line-height: 1.4;
-      font-size: 0.875rem;
+      font-size: 12px;
       margin-bottom: 0;
     }
+    .event-location{
+
+        color: #8ea2a8;
+        font-weight: 300;
+        line-height: 1.4;
+        font-size: 12px;
+        margin-bottom: 0;
+        text-transform: uppercase;
+    }
+    //p{
+    //  color: #597a84;
+    //  font-weight: 300;
+    //  line-height: 1.4;
+    //  font-size: 0.875rem;
+    //  margin-bottom: 0;
+    //}
   }
 
   @media (max-width: 768px) {
