fixed navbar with the box shadow

--- a/app/assets/stylesheets/web/common/_navbar.scss
+++ b/app/assets/stylesheets/web/common/_navbar.scss
@@ -2,13 +2,20 @@
 @import "../ost_theme/variables";
 
 .ost-nav{
-
+  background-color: $white;
   .ost-brand {
     padding: 0.8rem 1rem;
   }
 
   li{
     position: relative;
+  }
+
+  @media (min-width: map-get($grid-breakpoints, "md")){
+    &.nav-box-shadow{
+      box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.05);
+      transition: box-shadow 0.5s cubic-bezier(0,1,.5,1);
+    }
   }
 
   .main-nav-item{
