--- a/app/views/web/ost/roadmap/desktop/_jumbotron.erb
+++ b/app/views/web/ost/roadmap/desktop/_jumbotron.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid jumbotron-container pt-5 jumbo">
+<div class="container-fluid jumbotron-container pt-5 py-3 jumbo">
   <div class="row">
     <div class="container jumbotron-animate">
       <div class="row">
