--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -23,7 +23,7 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6 info-card d-flex my-3 my-md-5">
-          <div class="info-card-body p-3 d-flex flex-column">
+          <div class="info-card-body p-3 pb-4 d-flex flex-column">
             <div style="flex: 1 1 auto;">
               <div class="d-flex align-items-center">
                 <svg width="35" height="35">
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 info-card d-flex my-3 my-md-5">
-          <div class="info-card-body p-3 d-flex flex-column">
+          <div class="info-card-body p-3 pb-4 d-flex flex-column">
             <div style="flex: 1 1 auto;">
               <div class="d-flex align-items-center">
                 <svg width="35" height="35">
