--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -2,9 +2,22 @@
   <div class="row">
     <div class="col col-lg-10 col-xl-9 mx-md-auto">
       <div class="row align-items-center">
-        <div class="col-md-12 col-lg-6 text-center text-lg-left">
+        <div class="col-12 d-block d-lg-none text-center">
           <h2 class="header-blue-900">OST Partners</h2>
           <p>Billions of App Actions<br/>Connecting Hundreds Of Millions Of Users</p>
+          <img class="img-fluid responsively-lazy"
+               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
+               alt="OST - Partners"
+               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
+               srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+            />
+          <p class="mt-3 text-center">OST Partner Reach<br/><span class="font-weight-bold">300 + Million User and counting</span></p>
+        </div>
+        <div class="col-md-12 col-lg-6 text-center text-lg-left">
+          <div class="d-none d-lg-block">
+            <h2 class="header-blue-900">OST Partners</h2>
+            <p>Billions of App Actions<br/>Connecting Hundreds Of Millions Of Users</p>
+          </div>
           <div class="row partners-companies mt-3">
             <div class="col-6 col-md-4 col-xl-3 my-3">
               <span class="partners-gushcloud-icon"></span>
@@ -34,7 +47,7 @@
           <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST Partners">MEET OST PARTNERS</a>
           <a href="" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3" title="Discover POCS">DISCOVER POCS</a>
         </div>
-        <div class="col-8 col-md-6 col-lg-4 mx-auto mt-5 mt-lg-0">
+        <div class="col-8 col-md-6 col-lg-4 mx-auto mt-5 mt-lg-0 d-none d-lg-block">
           <img class="img-fluid responsively-lazy"
                src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
                alt="OST - Partners"
