--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -1,17 +1,25 @@
 <section class="container-fluid container-partners py-5">
   <div class="row">
     <div class="col col-lg-10 col-xl-9 mx-md-auto">
-      <div class="row align-items-center">
+      <div class="row">
         <div class="col-12 d-block d-lg-none text-center">
           <h2 class="header-blue-900">OST Partners</h2>
           <p>Billions of App Actions<br/>Connecting Hundreds Of Millions Of Users</p>
-          <img class="img-fluid responsively-lazy"
-               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
-               alt="OST - Partners"
-               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
-               srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-            />
-          <p class="mt-3 text-center">OST Partner Reach<br/><span class="font-weight-bold">300 + Million User and counting</span></p>
+          <div class="play-video">
+            <div class="video-image">
+              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png 1000w" class="img-fluid" alt="OST - Design Your Token" title="" />
+              <div class="play">
+                <svg class="svg-play">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#video-play-icon"></use>
+                  </switch>
+                </svg>
+              </div>
+            </div>
+            <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="https://www.youtube.com/embed/OlPu9ezzPzQ?rel=0&autoplay=1" hidden>
+            </div>
+          </div>
+          <p class="mt-3 text-center">The LGBT Foundation will be launching the LGBT Token to empower &amp; connect LGBT+ people all over the world.<br><span class="font-weight-bold">Watch their POC</span></p>
         </div>
         <div class="col-md-12 col-lg-6 text-center text-lg-left">
           <div class="d-none d-lg-block">
@@ -47,14 +55,22 @@
           <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST Partners">MEET OST PARTNERS</a>
           <a href="" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3" title="Discover POCS">DISCOVER POCS</a>
         </div>
-        <div class="col-8 col-md-6 col-lg-4 mx-auto mt-5 mt-lg-0 d-none d-lg-block">
-          <img class="img-fluid responsively-lazy"
-               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
-               alt="OST - Partners"
-               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
-               srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-            />
-          <p class="mt-3 text-center">OST Partner Reach<br/><span class="font-weight-bold">300 + Million User and counting</span></p>
+        <div class="col-12 col-md-6 col-lg-6 d-none d-lg-block mt-3">
+          <div class="play-video">
+            <div class="video-image">
+              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png 1000w" class="img-fluid" alt="OST - Design Your Token" title="" />
+              <div class="play">
+                <svg class="svg-play">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#video-play-icon"></use>
+                  </switch>
+                </svg>
+              </div>
+            </div>
+            <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="https://www.youtube.com/embed/OlPu9ezzPzQ?rel=0&autoplay=1" hidden>
+            </div>
+          </div>
+          <p class="mt-3 text-center">The LGBT Foundation will be launching the LGBT Token to empower &amp; connect LGBT+ people all over the world.<br> <span class="font-weight-bold">Watch their POC</span></p>
         </div>
       </div>
     </div>
