team page fixed navbar

--- a/app/views/shared/web/common/_navigation_nav.erb
+++ b/app/views/shared/web/common/_navigation_nav.erb
@@ -7,7 +7,7 @@
   <div class="container-fluid">
 
     <div class="row nav-gradient">
-      <div class="mx-auto col-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+      <div class="mx-auto col-12 col-md-10 col-lg-8">
 
         <ul class="nav">
           <% content.each_with_index  do |element, idx| %>
