svg color changed

--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -240,7 +240,7 @@
     </g>
   </symbol>
   <symbol id="events-podcast-icon" viewBox="0 0 136.01 192">
-    <defs><style>.events-podcast-icon{fill:none;stroke:#b8d2d5;stroke-linecap:round;stroke-linejoin:round;stroke-width:8px}</style></defs>
+    <defs><style>.events-podcast-icon{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:8px}</style></defs>
     <g id="Layer_2" data-name="Layer 2">
       <g id="graphics">
         <g id="Music-Audio_Microphone_microphone-podcast-2" data-name="Music-Audio / Microphone / microphone-podcast-2">
@@ -275,7 +275,7 @@
     </g>
   </symbol>
   <symbol id="events-event-icon" viewBox="0 0 191.08 168.99">
-    <defs><style>.events-event-icon{fill:none;stroke:#b8d2d5;stroke-linecap:round;stroke-linejoin:round;stroke-width:8px}</style></defs>
+    <defs><style>.events-event-icon{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:8px}</style></defs>
     <g id="Layer_2" data-name="Layer 2">
       <g id="graphics">
         <path d="M39.26 36.59a17.63 17.63 0 0 0-35.26 0v107.83h35.26M83.16 127a21.89 21.89 0 1 1-43.78 0" class="events-event-icon"/>
