partners section pause video on scroll and body click

--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -5,7 +5,7 @@
         <div class="col-12 d-block d-lg-none text-center">
           <h2 class="header-blue-900">OST Partners</h2>
           <p>Billions of App Actions<br/>Connecting Hundreds Of Millions Of Users</p>
-          <div class="play-video">
+          <div class="play-video" id="partner-video">
             <div class="video-image">
               <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png 1000w" class="img-fluid" alt="OST - Design Your Token" title="" />
               <div class="play">
@@ -16,10 +16,10 @@
                 </svg>
               </div>
             </div>
-            <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="https://www.youtube.com/embed/OlPu9ezzPzQ?rel=0&autoplay=1" hidden>
+            <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="https://www.youtube.com/embed/OlPu9ezzPzQ?enablejsapi=1&version=3&rel=0&autoplay=1" hidden>
             </div>
           </div>
-          <p class="mt-3 text-center">The LGBT Foundation will be launching the LGBT Token to empower &amp; connect LGBT+ people all over the world.<br><span class="font-weight-bold">Watch their POC</span></p>
+          <p class="mt-3 text-center">The LGBT Foundation will be launching the LGBT Token to empower &amp; connect LGBT+ people all over the world.Watch their POC</p>
         </div>
         <div class="col-md-12 col-lg-6 text-center text-lg-left">
           <div class="d-none d-lg-block">
@@ -56,7 +56,7 @@
           <a href="" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3" title="Discover POCS">DISCOVER POCS</a>
         </div>
         <div class="col-12 col-md-6 col-lg-6 d-none d-lg-block mt-3">
-          <div class="play-video">
+          <div class="play-video" id="partner-video">
             <div class="video-image">
               <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png 1000w" class="img-fluid" alt="OST - Design Your Token" title="" />
               <div class="play">
@@ -67,10 +67,10 @@
                 </svg>
               </div>
             </div>
-            <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="https://www.youtube.com/embed/OlPu9ezzPzQ?rel=0&autoplay=1" hidden>
+            <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="https://www.youtube.com/embed/OlPu9ezzPzQ?enablejsapi=1&version=3&rel=0&autoplay=1" hidden>
             </div>
           </div>
-          <p class="mt-3 text-center">The LGBT Foundation will be launching the LGBT Token to empower &amp; connect LGBT+ people all over the world.<br> <span class="font-weight-bold">Watch their POC</span></p>
+          <p class="mt-3 text-center">The LGBT Foundation will be launching the LGBT Token to empower &amp; connect LGBT+ people all over the world.Watch their POC</p>
         </div>
       </div>
     </div>
