--- a/app/assets/stylesheets/web/ost/index/Partners.scss
+++ b/app/assets/stylesheets/web/ost/index/Partners.scss
@@ -74,9 +74,9 @@ $sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-page
   }
 
   .play-video {
-    border: 2px solid #587a85;
+    //border: 2px solid #587a85;
     border-radius: 2.5px;
-    box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.06);
+    //box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.06);
     .video-image {
       position: relative;
       .play {
