--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -5,7 +5,7 @@
         <div class="col-12 d-block d-lg-none text-center">
           <h2 class="header-blue-900">OST Partners</h2>
           <p>Billions of App Actions<br/>Connecting Hundreds Of Millions Of Users</p>
-          <div class="play-video" id="partner-video">
+          <div class="play-video" id="partner-video-mobile">
             <div class="video-image">
               <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png 1000w" class="img-fluid" alt="OST - Design Your Token" title="" />
               <div class="play">
