--- a/app/views/web/ost/index/_roadmap.erb
+++ b/app/views/web/ost/index/_roadmap.erb
@@ -5,11 +5,17 @@
         <%= render :partial => "/web/ost/index/roadmap-categories" %>
         <div class="mt-5">
           <%= render :partial => "/web/ost/roadmap/desktop/2018-q4", locals: {
-              class_name: 'pt-5 mb-5',
               visible_class: ''
           } %>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="roadmap-border-btm">
+    <div class="triangle">
+      <svg viewBox="0 0 30 30" preserveAspectRatio="none">
+        <polyline points="3 3 15 13 27 3" fill="#f2f8f8" stroke-width="1"/>
+      </svg>
     </div>
   </div>
 </div>
